changed background color slightly

--- a/styles.scss
+++ b/styles.scss
@@ -3,7 +3,7 @@ $panel-bg: rgba(0, 0, 0, 0.5);
 $text-color: #ffffff;
 
 body {
-  background: linear-gradient(135deg, #0000ff, #000000);
+  background: linear-gradient(135deg, #333399, #0D0D0D);
   color: $text-color;
   font-family: Arial, sans-serif;
   margin: 0;
